tests/parser/bad/type_t-tid-arrow-tid-with.scilla
scilla_version 0

library TestLib

(* likely missing an arrow *)

let f : 'A -> 'B 'C
